changed the footer

--- a/vanilla.html
+++ b/vanilla.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>hello world!</h1>
-    <footer>Coded by Haanieh Nasiraei Mir</footer>
+    <footer> by Haanieh Nasiraei Mir</footer>
 </body>
 </html>
